WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
106682
Chromium: Error in AccessibilityUIElement::intValueGetterCallback
https://bugs.webkit.org/show_bug.cgi?id=106682
Summary
Chromium: Error in AccessibilityUIElement::intValueGetterCallback
James Craig
Reported
2013-01-11 11:31:21 PST
See
comment #4
on 106243:
https://bugs.webkit.org/show_bug.cgi?id=106243#c4
> test looks like its failing on chromium because they implement intValue() as > void AccessibilityUIElement::intValueGetterCallback(CppVariant* result) > { > result->set(accessibilityObject().valueForRange()); > } > > and we do something different. > > I would skip this test in LayoutTests/platform/chromium/TestExpectations and make a bug for chromium to resolve this intValue() difference and assign to Dominic
Attachments
Patch
(3.77 KB, patch)
2013-01-12 00:27 PST
,
Dominic Mazzoni
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dominic Mazzoni
Comment 1
2013-01-12 00:27:00 PST
Created
attachment 182460
[details]
Patch
WebKit Review Bot
Comment 2
2013-01-14 13:40:12 PST
Comment on
attachment 182460
[details]
Patch Clearing flags on attachment: 182460 Committed
r139658
: <
http://trac.webkit.org/changeset/139658
>
WebKit Review Bot
Comment 3
2013-01-14 13:40:15 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug